--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Eigene Webseite</title>
 
     <link rel="stylesheet" href="style.css">
+    <script src="./main.js" defer></script>
   </head>
 
   <body>
@@ -16,8 +17,9 @@
 
     <main>
       <section>
-        <h2>Dies ist ein erster Abschnitt</h2>
-        Abschnitte haben immer einen Titel und dann den Text.
+        <h2>Diese Website ist ein Steckbrief über mich</h2>
+        Alles ist so geplant, strukturiert und gestaltet. Ich wünsche Ihnen viel
+        Spass auf meiner Website!
       </section>
 
       <section>
@@ -27,11 +29,11 @@
       </section>
 
       <section>
-        <h2>Unterseiten verlinken</h2>
+        <h2>Meine Hobbies</h2>
         <p>
-          Wir können auch weitere Webseiten verknüpfen, dafür müssen wir nur
-          einen Link angeben, wie zum Beispiel zu den
-          <a href="./unterseiten/hobbies.html"> Hobbies </a>.
+          Hier können Sie zu meinen
+          <a href="./unterseiten/hobbies.html"> Hobbies </a>
+          weitergeleitet werden.
         </p>
       </section>
     </main>
