--- a/unterseiten/hobbies.html
+++ b/unterseiten/hobbies.html
@@ -15,8 +15,16 @@
         <h2>Sport</h2>
         <p>Diese Sportarten mache ich gerne</p>
         <ul>
-          <li>Volleyball</li>
-          <li>Trailrunning</li>
+          <li>Fussball</li>
+          <li>Ins Gym gehen</li>
+        </ul>
+      </section>
+      <section>
+        <h2>Soziales</h2>
+        <ul>
+          <li>
+            Mit meinen <a href="./Freunde.html"> Freunde </a>rausgehen
+          </li>
         </ul>
       </section>
     </main>
