--- a/index.html
+++ b/index.html
@@ -23,9 +23,23 @@
       </section>
 
       <section>
-        <h2>Das p-Tag</h2>
-        <p>Der Text sollte immer in ein p gepackt werden.</p>
-        <p>Mit dem p ist es auch möglich einen Zeilenumbruch zu haben.</p>
+        <h2>Allgemeines zu mir</h2>
+        <ul>
+          <li>Mein vollstädniger Name lautet Lio Matteo Screti</li>
+          <li>Ich bin geboren am 12.08.2009</li>
+          <li>
+            Ich lebe zusammen mit meinen Eltern und meiner älteren und einzigen
+            Schwester
+          </li>
+          <li>
+            Meine Mutter ist zu 100% Schweizerin und mein Vater ist zu 100%
+            Italiener
+          </li>
+          <li>
+            Ich bin Fan des lokalen Clubs, FC Basel 1893 und des Italienischen
+            Clubs FC Internazionale Milano
+          </li>
+        </ul>
       </section>
 
       <section>
