--- a/unterseiten/Freunde.html
+++ b/unterseiten/Freunde.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Freunde</title>
+
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
     <header>
@@ -24,6 +26,12 @@
             Wenn sich die Gelegenheit ergibt, gehen manche noch auf Konzerte
           </li>
         </ul>
+        <p>
+          <img
+            src="https://image.stern.de/32812668/t/Gl/v5/w1440/r1.3333/-/freundschaft.jpg"
+            alt=""
+          >
+        </p>
       </section>
       <section>
         <h2>Zukunftspläne</h2>
