--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
     <script src="./main.js" defer></script>
   </head>
 
-  <body>
-    <header>
+  <body class="grid-wrapper">
+    <header style="grid-area: header;">
       <h1>Webseite von Lio Screti</h1>
     </header>
 
-    <main>
+    <main style="grid-area: main;">
       <section>
         <h2>Diese Website ist ein Steckbrief über mich</h2>
         Alles ist so geplant, strukturiert und gestaltet. Ich wünsche Ihnen viel
@@ -41,6 +41,7 @@
           </li>
         </ul>
       </section>
+      <aside style="grid-area: aside"></aside>
 
       <section>
         <h2>Meine Hobbies</h2>
@@ -52,6 +53,6 @@
       </section>
     </main>
 
-    <footer>Meine Webseite</footer>
+    <footer style="grid-area: footer">Meine Webseite</footer>
   </body>
 </html>
