--- a/index.html
+++ b/index.html
@@ -41,7 +41,6 @@
           </li>
         </ul>
       </section>
-      <aside style="grid-area: aside"></aside>
 
       <section>
         <h2>Meine Hobbies</h2>
@@ -52,6 +51,16 @@
         </p>
       </section>
     </main>
+
+    <aside style="grid-area: aside">
+      <nav>
+        <ul>
+          <li>
+            <a href="./unterseiten/hobbies.html"> Hobbies </a>
+          </li>
+        </ul>
+      </nav>
+    </aside>
 
     <footer style="grid-area: footer">Meine Webseite</footer>
   </body>
