Bilder eingefügt, Text geändert

--- a/index.html
+++ b/index.html
@@ -24,6 +24,11 @@
 
       <section>
         <h2>Allgemeines zu mir</h2>
+        <p>
+          <img
+            src=https://media.istockphoto.com/id/1398098041/de/vektor/mann-steht-mit-denktaschen-erwachsene-menschen-isolierte-vektorsilhouette.jpg?s=612x612&w=0&k=20&c=5rPMim8lWEWaZ8MgT-Ib2d2al1KX6krFKCtC0z0xZc4=
+          >
+        </p>
         <ul>
           <li>Mein vollstädniger Name lautet Lio Matteo Screti</li>
           <li>Ich bin geboren am 12.08.2009</li>
