--- a/unterseiten/Freunde.html
+++ b/unterseiten/Freunde.html
@@ -37,12 +37,17 @@
         <h2>Zukunftspläne</h2>
         <ul>
           <li>
-            Im Sommer 2026 gehen fünf oder sechs Leute von uns zusammen nach
-            Malaga, Spanien in die Sommerferien
+            Im Sommer 2026 gehen ich und vier andere Freunde zusammen nach
+            Malaga, Spanien in die Sommerferien. Wir werden dort 9 Nächte in einem Airbnb verbringen, in dem Dorf Fuengirola, welches am Strand und zwischen Marbella und Malaga gelegen ist.
           </li>
+          <p>
+            <img
+            src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Flag_of_Spain.svg/250px-Flag_of_Spain.svg.png"
+          </p>
           <li>
-            Für die kalte Jahreszeit und auch sonst, wollen wir ein Räumli
-            finden und nach unseren Wünschen einrichten
+            Für die kalte Jahreszeit und auch sonst, richten wir ein Räumchen
+            von einem Kollegen schick ein und kreieren einen Ort für uns zum
+            abhängen
           </li>
         </ul>
       </section>
