--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <h2>Allgemeines zu mir</h2>
         <p>
           <img
-            src=https://media.istockphoto.com/id/1398098041/de/vektor/mann-steht-mit-denktaschen-erwachsene-menschen-isolierte-vektorsilhouette.jpg?s=612x612&w=0&k=20&c=5rPMim8lWEWaZ8MgT-Ib2d2al1KX6krFKCtC0z0xZc4=
-          >
+            src=https://media.istockphoto.com/id/1345388323/de/vektor/menschliche-silhouette-isoliertes-vektorsymbol.jpg?s=612x612&w=0&k=20&c=Y5eAYa0O_RxlRM1xNc2fOJWdgJeTEh9nkHurcp-RiW0=
+            >
         </p>
         <ul>
           <li>Mein vollstädniger Name lautet Lio Matteo Screti</li>
@@ -55,13 +55,80 @@
           weitergeleitet werden.
         </p>
       </section>
+
+      <section>
+        <h2>Meine Schulkarriere</h2>
+        <p>
+          Zwei Drittel von meiner
+          <a href="./unterseiten/Schulkarriere.html">Schulkarriere</a>
+          habe ich in meinem Heimatsdorf Pratteln und das andere Drittel in dem
+          Nachbarsdorf Muttenz verbracht.
+        </p>
+      </section>
     </main>
 
     <aside style="grid-area: aside">
       <nav>
         <ul>
           <li>
-            <a href="./unterseiten/hobbies.html"> Hobbies </a>
+            <a href="./unterseiten/hobbies.html"
+              ><svg width, height="30" viewBox="0 0 64 64">
+                <!-- Stange -->
+                <rect x="16" y="42" width="32" height="4" fill="#000000"/>
+
+                <!-- Gewicht links -->
+                <rect x="10" y="38" width="6" height="12" fill="#000000"/>
+                <rect x="6" y="36" width="4" height="16" fill="#000000"/>
+
+                <!-- Gewicht rechts -->
+                <rect x="48" y="38" width="6" height="12" fill="#000000"/>
+                <rect x="54" y="36" width="4" height="16" fill="#000000"/>
+              </svg>
+              Hobbies
+            </a>
+          </li>
+        </ul>
+      </nav>
+      <nav>
+        <ul>
+          <li>
+            <a href="./unterseiten/Freunde.html"
+              ><svg width, height="30" viewBox="0 0 64 64">
+                <!-- Köpfe -->
+                <circle cx="18" cy="18" r="7" fill="#000000"/>
+                <circle cx="46" cy="18" r="7" fill="#000000"/>
+
+                <!-- Körper -->
+                <rect x="10" y="30" width="16" height="22" fill="#000000"/>
+                <rect x="38" y="30" width="16" height="22" fill="#000000"/>
+              </svg>
+              Freunde</a
+            >
+          </li>
+        </ul>
+      </nav>
+      <nav>
+        <ul>
+          <li>
+            <a href="./unterseiten/Schulkarriere.html"
+              ><svg width, height="30" viewBox="0 0 64 64">
+                <!-- Buch 1 -->
+                <rect x="12" y="36" width="40" height="10" fill="#000000"/>
+                <rect x="16" y="38" width="4" height="6" fill="#000000"/>
+                width="40" height="10" fill="#000000"/>
+                <rect x="14" y="28" width="4" height="6" fill="#000000"/>
+                <circle cx="44" cy="31" r="2" fill="#000000"/>
+
+                <!-- Buch 3 -->
+                <rect x="14" y="16" width="40" height="10" fill="#000000"/>
+                <rect x="18" y="18" width="4" height="6" fill="#000000"/>
+                <circle cx="48" cy="21" r="2" fill="#000000"/>
+              </svg>
+              <circle cx="46" cy="41" r="2" fill="#ffffff"/>
+
+              <!-- Buch 2 -->
+              <rect x="10" y="26"></rect>Schulkarriere</a
+            >
           </li>
         </ul>
       </nav>
