--- a/unterseiten/Freunde.html
+++ b/unterseiten/Freunde.html
@@ -38,11 +38,15 @@
         <ul>
           <li>
             Im Sommer 2026 gehen ich und vier andere Freunde zusammen nach
-            Malaga, Spanien in die Sommerferien. Wir werden dort 9 Nächte in einem Airbnb verbringen, in dem Dorf Fuengirola, welches am Strand und zwischen Marbella und Malaga gelegen ist.
+            Malaga, Spanien in die Sommerferien. Wir werden dort 9 Nächte in
+            einem Airbnb verbringen, in dem Dorf Fuengirola, welches am Strand
+            und zwischen Marbella und Malaga gelegen ist.
           </li>
           <p>
             <img
-            src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Flag_of_Spain.svg/250px-Flag_of_Spain.svg.png"
+              src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Flag_of_Spain.svg/250px-Flag_of_Spain.svg.png"
+            >
+            <!--nghgjh-->
           </p>
           <li>
             Für die kalte Jahreszeit und auch sonst, richten wir ein Räumchen
