--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <body class="grid-wrapper">
     <header style="grid-area: header;">
       <h1>Webseite von Lio Screti</h1>
+      <button onclick="increaseCount()">click</button>
     </header>
 
     <main style="grid-area: main;">
