--- a/unterseiten/Freunde.html
+++ b/unterseiten/Freunde.html
@@ -1,58 +1,59 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freunde</title>
+<html lang="en"><!-- Dokumenttyp --><!-- Start des HTML-Dokuments, Umstellung auf Englisch -->
+  <head><!-- Kopfbereich mit Metadaten -->
+    <meta charset="UTF-8"><!-- Zeichencodierung UTF-8 -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!-- Sorgt für responsives Design auf mobilen Geräten -->
+    <title>Freunde</title><!-- Titel der Unterseite -->
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style.css"><!-- Verknüpft die externe CSS-Datei -->
   </head>
-  <body>
-    <header>
-      <h1>Meine Freunde</h1>
+  <body><!-- Sichtbarer Seiteninhalt -->
+    <header><!-- Kopfbereich der Seite -->
+      <h1>Meine Freunde</h1><!-- Hauptüberschrift -->
     </header>
 
-    <main>
-      <section>
-        <h2>Aktivitäten</h2>
-        <ul>
-          <li>Manchaml gehen wir Fussball spielen</li>
-          <li>Ca. zweimal die Woche gehen wir in unserem Dorf raus</li>
+    <main><!-- Hauptinhalt der Seite -->
+      <section><!-- Abschnitt -->
+        <h2>Aktivitäten</h2><!-- Untertitel -->
+        <ul><!-- Ungeordnete Liste -->
+          <li>Manchaml gehen wir Fussball spielen</li><!-- Listenpunkt -->
+          <li>
+            Ca. zweimal die Woche gehen wir in unserem Dorf raus
+          </li><!-- Listenpunkt -->
           <li>
             Sicher einmal pro Monat, will die Freundesgruppe auf Basel am Abend
             oder auch einmal im Jahr auf Zürich
-          </li>
+          </li><!-- Listenpunkt -->
           <li>
             Wenn sich die Gelegenheit ergibt, gehen manche noch auf Konzerte
-          </li>
+          </li><!-- Listenpunkt -->
         </ul>
-        <p>
+        <p><!-- Abschnitt für Bild -->
           <img
             src="https://image.stern.de/32812668/t/Gl/v5/w1440/r1.3333/-/freundschaft.jpg"
             alt=""
-          >
+          ><!-- Bild -->
         </p>
       </section>
-      <section>
-        <h2>Zukunftspläne</h2>
-        <ul>
+      <section><!-- Abschnitt -->
+        <h2>Zukunftspläne</h2><!-- Untertitel -->
+        <ul><!-- Ungeordnete Liste -->
           <li>
             Im Sommer 2026 gehen ich und vier andere Freunde zusammen nach
             Malaga, Spanien in die Sommerferien. Wir werden dort 9 Nächte in
             einem Airbnb verbringen, in dem Dorf Fuengirola, welches am Strand
             und zwischen Marbella und Malaga gelegen ist.
-          </li>
-          <p>
+          </li><!-- Listenpunkt -->
+          <p><!-- Abschnitt für Bild -->
             <img
               src="https://upload.wikimedia.org/wikipedia/commons/thumb/9/9a/Flag_of_Spain.svg/250px-Flag_of_Spain.svg.png"
-            >
-            <!--nghgjh-->
+            ><!-- Bild -->
           </p>
           <li>
             Für die kalte Jahreszeit und auch sonst, richten wir ein Räumchen
             von einem Kollegen schick ein und kreieren einen Ort für uns zum
             abhängen
-          </li>
+          </li><!-- Listenpunkt -->
         </ul>
       </section>
     </main>
