--- a/unterseiten/Schulkarriere.html
+++ b/unterseiten/Schulkarriere.html
@@ -1,65 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Freunde</title>
+<!DOCTYPE html> <!-- Dokumenttyp -->
+<html lang="en"> <!-- Start des HTML-Dokuments, Umstellung auf Englisch -->
+  <head> <!-- Kopfbereich mit Metadaten -->
+    <meta charset="UTF-8"> <!-- Zeichencodierung UTF-8 (für Umlaute & Sonderzeichen) -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Optimierung für mobile Geräte -->
+    <title>Freunde</title> <!-- Titel der Unterseite -->
 
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="../style.css"> <!-- Einbindung der externen CSS-Datei -->
   </head>
-  <body>
-    <header>
-      <h1>Meine Schulkarriere</h1>
+  <body> <!-- Sichtbarer Seiteninhalt -->
+    <header> <!-- Kopfbereich der Seite -->
+      <h1>Meine Schulkarriere</h1> <!-- Hauptüberschrift -->
     </header>
 
-    <main>
-        <section>
-            <h2>Meine Spielgruppenzeit</h2>
-            <ul>
-             <li>Mit vier Jahren bin ich in die Spielgruppe, in Pratteln, in die Spielgruppe Schmittiplatz, gekommen, in welcher ich ein Jahr geblieben bin</li>
+    <main> <!-- Hauptinhalt der Seite -->
+        <section> <!-- Abschnitt -->
+            <h2>Meine Spielgruppenzeit</h2> <!-- Abschnittsüberschrift -->
+            <ul> <!-- Ungeordnete Liste -->
+             <li>Mit vier Jahren bin ich in die Spielgruppe, in Pratteln, in die Spielgruppe Schmittiplatz, gekommen, in welcher ich ein Jahr geblieben bin</li> <!-- Listenpunkt -->
            </ul>
         </section>
-        <section>
-            <h2>Meine Kindergartenzeit</h2>
-            <ul>
-                <li>Als ich fünf Jahre alt war, kam ich in den Kindergarten Hexmatt in Pratteln</li>
-                <li>Ich bekam das Tier, an meiner Kiste und Kleiderhaken Katze</li>
-                <p>
-                    <img src="https://api.i-web.ch/public/guest/getImageString/s159/f79486341b89e880b811ed8409f6fcf3/381/0/598c3dfc28b1f//">
+        <section> <!-- Abschnitt -->
+            <h2>Meine Kindergartenzeit</h2> <!-- Abschnittsüberschrift -->
+            <ul> <!-- Ungeordnete Liste -->
+                <li>Als ich fünf Jahre alt war, kam ich in den Kindergarten Hexmatt in Pratteln</li> <!-- Listenpunkt -->
+                <li>Ich bekam das Tier, an meiner Kiste und Kleiderhaken Katze</li> <!-- Listenpunkt -->
+                <p> <!-- Absatz für ein Bild -->
+                    <img src="https://api.i-web.ch/public/guest/getImageString/s159/f79486341b89e880b811ed8409f6fcf3/381/0/598c3dfc28b1f//"> <!-- Bild -->
                 </p>
             </ul>
         </section>
-        <section>
-            <h2>Meine Primarschulzeit</h2>
-            <ul>
-                <li>In meinem siebten Lebensjahr hatte ich meinen ersten Schultag als Primarschüler</li>
-                <li>Von der ersten bis zur zweiten Klasse war ich im Primarschulhaus Grossmatt in Pratteln und von der vierten bis zu sechsten Klasse, war ich im Schulhaus Erlimatt 1, auch in Pratteln</li>
-                <p>
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/2019-BL-Pratteln-Grossmattschulhaus.jpg/1200px-2019-BL-Pratteln-Grossmattschulhaus.jpg">
+        <section> <!-- Abschnitt -->
+            <h2>Meine Primarschulzeit</h2> <!-- Abschnittsüberschrift -->
+            <ul> <!-- Ungeordnete Liste -->
+                <li>In meinem siebten Lebensjahr hatte ich meinen ersten Schultag als Primarschüler</li> <!-- Listenpunkt -->
+                <li>Von der ersten bis zur zweiten Klasse war ich im Primarschulhaus Grossmatt in Pratteln und von der vierten bis zu sechsten Klasse, war ich im Schulhaus Erlimatt 1, auch in Pratteln</li> <!-- Listenpunkt -->
+                <p> <!-- Absatz für ein Bild -->
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/ff/2019-BL-Pratteln-Grossmattschulhaus.jpg/1200px-2019-BL-Pratteln-Grossmattschulhaus.jpg"> <!-- Bild -->
 
-                    <img src="https://api.i-web.ch/public/guest/getImageString/s159/a8db3c6ce30654e98bace0c87faff05c/399/0/598c322924178//">
+                    <img src="https://api.i-web.ch/public/guest/getImageString/s159/a8db3c6ce30654e98bace0c87faff05c/399/0/598c322924178//"> <!-- Bild -->
                 </p>
             </ul>
         </section>
-        <section>
-            <h2>Meine Sekundarschulzeit</h2>
-            <ul>
-                <li>Mit 13 Jahren wurde ich nach Muttenz, in die Sekundarschule Hinterzweien 1, geschickt, ins Niveau P</li>
-                <li>Aus meiner alten Primarklasse kamen noch zwei gute Freunde von mir mit</li>
-                <li>Ich schaffte alle drei Jahre mit ganz guten Noten und hatte alle Optionen, für weiterführende Schulen offen</li>
-                <p>
-                    <img src="https://lh5.googleusercontent.com/p/AF1QipPU7mqLKpK52u4doOaualqziY4Aaa5YNEdd5Slo=w203-h203-k-no">
+        <section> <!-- Abschnitt -->
+            <h2>Meine Sekundarschulzeit</h2> <!-- Abschnittsüberschrift -->
+            <ul> <!-- Ungeordnete Liste -->
+                <li>Mit 13 Jahren wurde ich nach Muttenz, in die Sekundarschule Hinterzweien 1, geschickt, ins Niveau P</li> <!-- Listenpunkt -->
+                <li>Aus meiner alten Primarklasse kamen noch zwei gute Freunde von mir mit</li> <!-- Listenpunkt -->
+                <li>Ich schaffte alle drei Jahre mit ganz guten Noten und hatte alle Optionen, für weiterführende Schulen offen</li> <!-- Listenpunkt -->
+                <p> <!-- Absatz für ein Bild -->
+                    <img src="https://lh5.googleusercontent.com/p/AF1QipPU7mqLKpK52u4doOaualqziY4Aaa5YNEdd5Slo=w203-h203-k-no"> <!-- Bild -->
                 </p>
             </ul>
         </section>
-        <section>
-            <h2>Was mache ich jetzt</h2>
-            <ul>
-                <li>Ich bin jetzt 16 Jahre alt und besuche das Gymnasium Muttenz</li>
-                <li>Ich habe das Schwerpunktfach Wirtschaft und Recht gewählt</li>
-                <li>In meiner jetztigen Klasse, kenne ich die Mehrheit noch von meiner Sekundarschulzeit, da drei meiner neuen Klasse schon in meiner alten Klasse waren und zehn Stück in meinen Parallelklassen</li>
-                <p>
-                    <img src="https://www.gym-muttenz.ch/fileadmin/_processed_/7/c/csm_20201123-1000470-2_d2fc5d00a3.jpg">
+        <section> <!-- Abschnitt -->
+            <h2>Was mache ich jetzt</h2> <!-- Abschnittsüberschrift -->
+            <ul> <!-- Ungeordnete Liste -->
+                <li>Ich bin jetzt 16 Jahre alt und besuche das Gymnasium Muttenz</li> <!-- Listenpunkt -->
+                <li>Ich habe das Schwerpunktfach Wirtschaft und Recht gewählt</li> <!-- Listenpunkt -->
+                <li>In meiner jetztigen Klasse, kenne ich die Mehrheit noch von meiner Sekundarschulzeit, da drei meiner neuen Klasse schon in meiner alten Klasse waren und zehn Stück in meinen Parallelklassen</li> <!-- Listenpunkt -->
+                <p> <!-- Absatz für ein Bild -->
+                    <img src="https://www.gym-muttenz.ch/fileadmin/_processed_/7/c/csm_20201123-1000470-2_d2fc5d00a3.jpg"> <!-- Bild -->
                 </p>
             </ul>
         </section>
