--- a/index.html
+++ b/index.html
@@ -1,67 +1,67 @@
-<!DOCTYPE html>
-<html lang="de">
-  <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Eigene Webseite</title>
+<!DOCTYPE html> <!-- Dokumenttyp -->
+<html lang="de"> <!-- Start des HTML-Dokuments, Sprache -->
+  <head> <!-- Kopfbereich -->
+    <meta charset="UTF-8"> <!-- Zeichencodierung UTF-8 (Umlaute, Sonderzeichen) -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge"> <!-- Kompatibilität für ältere Internet-Explorer-Versionen -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsives Verhalten für mobile Geräte -->
+    <title>Eigene Webseite</title> <!-- Titel im Browser-Tab -->
 
-    <link rel="stylesheet" href="style.css">
-    <script src="./main.js" defer></script>
+    <link rel="stylesheet" href="style.css"> <!-- Verknüpfung zur externen CSS-Datei -->
+    <script src="./main.js" defer></script> <!-- Einbindung einer JavaScript-Datei (wird erst nach HTML geladen) -->
   </head>
 
-  <body class="grid-wrapper">
-    <header style="grid-area: header;">
-      <h1>Webseite von Lio Screti</h1>
-      <button onclick="increaseCount()">click</button>
+  <body class="grid-wrapper"> <!-- Body mit CSS-Grid-Klasse für das Layout -->
+    <header style="grid-area: header;"> <!-- Header-Bereich, Grid-Zuweisung -->
+      <h1>Webseite von Lio Screti</h1> <!-- Hauptüberschrift -->
+      <button onclick="increaseCount()">click</button> <!-- Button, der beim Klicken eine JavaScript-Funktion ausführt -->
     </header>
 
-    <main style="grid-area: main;">
-      <section>
-        <h2>Diese Website ist ein Steckbrief über mich</h2>
+    <main style="grid-area: main;"> <!-- Hauptinhalt der Seite -->
+      <section> <!-- Ein Inhaltsabschnitt -->
+        <h2>Diese Website ist ein Steckbrief über mich</h2> <!-- Abschnittsüberschrift -->
         Alles ist so geplant, strukturiert und gestaltet. Ich wünsche Ihnen viel
-        Spass auf meiner Website!
+        Spass auf meiner Website! <!-- Beschreibungstext -->
       </section>
 
-      <section>
-        <h2>Allgemeines zu mir</h2>
-        <p>
+      <section> <!-- Ein Inhaltsabschnitt -->
+        <h2>Allgemeines zu mir</h2> <!-- Abschnittsüberschrift -->
+        <p> <!-- Absatz für das Bild -->
           <img
             src=https://media.istockphoto.com/id/1345388323/de/vektor/menschliche-silhouette-isoliertes-vektorsymbol.jpg?s=612x612&w=0&k=20&c=Y5eAYa0O_RxlRM1xNc2fOJWdgJeTEh9nkHurcp-RiW0=
-            >
+            > <!-- Bild -->
         </p>
-        <ul>
-          <li>Mein vollstädniger Name lautet Lio Matteo Screti</li>
-          <li>Ich bin geboren am 12.08.2009</li>
+        <ul> <!-- Ungeordnete Liste -->
+          <li>Mein vollstädniger Name lautet Lio Matteo Screti</li> <!-- Listenpunkt -->
+          <li>Ich bin geboren am 12.08.2009</li> <!-- Listenpunkt -->
           <li>
             Ich lebe zusammen mit meinen Eltern und meiner älteren und einzigen
             Schwester
-          </li>
+          </li> <!-- Listenpunkt -->
           <li>
             Meine Mutter ist zu 100% Schweizerin und mein Vater ist zu 100%
             Italiener
-          </li>
+          </li> <!-- Listenpunkt -->
           <li>
             Ich bin Fan des lokalen Clubs, FC Basel 1893 und des Italienischen
             Clubs FC Internazionale Milano
-          </li>
+          </li> <!-- Listenpunkt -->
         </ul>
       </section>
 
-      <section>
-        <h2>Meine Hobbies</h2>
-        <p>
+      <section> <!-- Ein Inhaltsabschnitt -->
+        <h2>Meine Hobbies</h2> <!-- Abschnittsüberschrift -->
+        <p> <!-- Absatz -->
           Hier können Sie zu meinen
-          <a href="./unterseiten/hobbies.html"> Hobbies </a>
+          <a href="./unterseiten/hobbies.html"> Hobbies </a> <!-- Link zu einer Unterseite -->
           weitergeleitet werden.
         </p>
       </section>
 
-      <section>
-        <h2>Meine Schulkarriere</h2>
-        <p>
+      <section> <!-- Ein Inhaltsabschnitt -->
+        <h2>Meine Schulkarriere</h2> <!-- Abschnittsüberschrift -->
+        <p> <!-- Absatz -->
           Zwei Drittel von meiner
-          <a href="./unterseiten/Schulkarriere.html">Schulkarriere</a>
+          <a href="./unterseiten/Schulkarriere.html">Schulkarriere</a> <!-- Link zu einer Unterseite -->
           habe ich in meinem Heimatsdorf Pratteln und das andere Drittel in dem
           Nachbarsdorf Muttenz verbracht.
         </p>
@@ -69,11 +69,11 @@
     </main>
 
     <aside style="grid-area: aside">
-      <nav>
-        <ul>
-          <li>
+      <nav> <!-- Navigation Hobbies -->
+        <ul> <!-- Ungeordnete Liste -->
+          <li> <!-- Listenpunkt -->
             <a href="./unterseiten/hobbies.html"
-              ><svg width, height="30" viewBox="0 0 64 64">
+              ><svg width, height="30" viewBox="0 0 64 64"> <!-- Link zu Unterwebseite -->
                 <!-- Stange -->
                 <rect x="16" y="42" width="32" height="4" fill="#000000"/>
 
@@ -90,11 +90,11 @@
           </li>
         </ul>
       </nav>
-      <nav>
-        <ul>
-          <li>
+      <nav> <!-- Navigation Freunde -->
+        <ul> <!-- Ungeordnete Liste -->
+          <li> <!-- Listenpunkt -->
             <a href="./unterseiten/Freunde.html"
-              ><svg width, height="30" viewBox="0 0 64 64">
+              ><svg width, height="30" viewBox="0 0 64 64"> <!-- Link zu Unterwebseite -->
                 <!-- Köpfe -->
                 <circle cx="18" cy="18" r="7" fill="#000000"/>
                 <circle cx="46" cy="18" r="7" fill="#000000"/>
@@ -108,11 +108,11 @@
           </li>
         </ul>
       </nav>
-      <nav>
-        <ul>
-          <li>
+      <nav> <!-- Navigation Schulkarriere -->
+        <ul> <!-- Ungeordnete Liste -->
+          <li> <!-- Listenpunkt -->
             <a href="./unterseiten/Schulkarriere.html"
-              ><svg width, height="30" viewBox="0 0 64 64">
+              ><svg width, height="30" viewBox="0 0 64 64"> <!-- Link zu Unterwebseite -->
                 <!-- Buch 1 -->
                 <rect x="12" y="36" width="40" height="10" fill="#000000"/>
                 <rect x="16" y="38" width="4" height="6" fill="#000000"/>
@@ -135,6 +135,6 @@
       </nav>
     </aside>
 
-    <footer style="grid-area: footer">Meine Webseite</footer>
+    <footer style="grid-area: footer">Meine Webseite</footer> <!-- Footer-Bereich -->
   </body>
 </html>
